@@ -24,6 +24,8 @@ Any correction, hardening pass, or follow-up change is recorded in a newer chang
 - Added `npm run verify:360:adapter:strict` helper to run full verify with strict adapter doctor mode enabled.
 - `verify:360` idempotence key context now includes strict-mode flags to avoid replay-key collisions between strict and non-strict runs.
 - Added optional `WEFTEND_360_SAFE_RUN_ADAPTER` override for verify deterministic safe-run pair; value is validated and included in idempotence/report policy context.
+- Invalid `WEFTEND_360_SAFE_RUN_ADAPTER` values now fail closed inside verify corridor while still writing fail receipt/report evidence (`VERIFY360_SAFE_RUN_ADAPTER_INVALID`).
+- `verify:360:harness` now validates invalid-adapter fail path, pointer non-advance, and evidence persistence.
 - Added `WEFTEND_360_FAIL_ON_PARTIAL=1` behavior and helper scripts to enforce non-zero exit on PARTIAL verify verdicts when required by release policy.
 - `verify_360_report.txt` now includes explicit policy and adapter-doctor strict summary lines for faster operator review (`policy.*`, `adapterDoctor.*`).
 - `verify:360:harness` now asserts those policy/adapter-doctor report lines are present across pass/replay/fail lanes.
